<resources>
    <string name="app_name">MissingItemReminder</string>
    <!-- Home Activity -->
    <string name="select_category">Select category</string>
    <string name="my_items">My Missing Items</string>
    <string name="describe_item">Describe item</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_description">Enter description</string>
    <string name="all_category">All categories</string>
    <string-array name="default_categories">
        <item>Cloth</item>
        <item>Borrowed items</item>
        <item>Seasonal items</item>
        <item>Everyday items</item>
    </string-array>
    <!-- Add Item Activity -->
    <string name="empty_entry">Field is empty</string>
    <string name="empty">Current item list is empty</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="title_activity_maps">Map</string>
    <string name="enter_category">Enter custom category</string>
    <string name="ok">OK</string>
    <string name="item_details">Item Details</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="preview">Preview</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="title_activity_splash">SplashActivity</string>
</resources>
