<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:elevation="10dp"
        android:gravity="center_vertical"
        android:text="@string/describe_item"
        android:singleLine="true"
        android:ellipsize="end"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="28sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/tv_title"
        android:background="@drawable/bottom_line" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:layout_marginEnd="16dp"
        android:hint="@string/enter_name"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_description"
        android:layout_below="@id/til_name"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tv_category_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/til_description"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/select_category"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/iv_add_category"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_below="@+id/tv_category_hint"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp"
        android:tint="@color/colorPrimaryDark"
        android:src="@drawable/ic_plus"/>

    <Spinner
        android:id="@+id/s_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_category_hint"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp" ></Spinner>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:rotation="180"
        android:scaleType="centerInside"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp" />

</RelativeLayout>