<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:elevation="10dp"
                android:gravity="center_vertical"
                android:text="@string/item_details"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="28sp" />
            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/tv_title"
                android:background="@drawable/bottom_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/name"/>

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    tools:text="dfvcdfvfdvdfvsdfvsdfvsdfvdsfvdsfvdf"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/description"/>

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    tools:text="sdfsdfsdfksjdkasjd" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/category" />

                <TextView
                    android:id="@+id/tv_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    tools:text="sdfsdfsdsdfsdf" />

                <ImageView
                    android:id="@+id/image_view"
                    android:layout_width="match_parent"
                    android:layout_height="450dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp" />

                <fragment
                    android:id="@+id/google_maps"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_margin="16dp" />

            </LinearLayout>
            
        </RelativeLayout>
        
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_check" />
    
</RelativeLayout>